--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -9,7 +9,7 @@ This topic describes how to install and configure the Pivotal Cloud Foundry (PCF
 
 ## <a id='reqs'></a> Requirements
 
-To install the PCF Runtime for Windows v1.11 tile, you must have Ops Manager 1.11.0 or later and Elastic Runtime 1.11.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
+To install the PCF Runtime for Windows v1.11 tile, you must have Ops Manager v1.11.0 or later and Elastic Runtime v1.11.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
 
 ## <a id='ert'></a> Step 1: Confirm Elastic Runtime Settings
 
@@ -38,27 +38,30 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. (Optional) If you want your PCF Runtime for Windows application workloads to be deployed to an isolation segment, perform the following steps:
 
-	1. Click **Application Containers**.
+    1. Click **Application Containers**.
 
-		<%= image_tag('app_containers_segment_name.png') %>
-	1. Under **Segment Name**, enter a name for your isolation segment. Ensure that this name is unique across your PCF deployment.
-	1. Click **Save**.
-	1. Perform the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to create the isolation segment in the Cloud Controller Database (CCDB).
+        <%= image_tag('app_containers_segment_name.png') %>
+    1. Under **Segment Name**, enter a name for your isolation segment. Ensure that this name is unique across your PCF deployment.
+
+    1. Click **Save**.
+    
+    1. Perform the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to create the isolation segment in the Cloud Controller Database (CCDB).
 
 1. (Optional) If you want to specify memory capacity and disk capacity for your Windows Cells, perform the following steps:
 	
-	1. Click **Advanced Features**.
+    1. Click **Advanced Features**.
 
-		<%= image_tag('advanced_features_fields.png') %>
+        <%= image_tag('advanced_features_fields.png') %>
 
-	1. Enter the total desired amount of Diego Cell memory capacity in the **Cell Memory Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell memory capacity settings that this field overrides.
+    1. Enter the total desired amount of Diego Cell memory capacity in the **Cell Memory Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell memory capacity settings that this field overrides.
 
-	1. Enter the total desired amount of Diego Cell disk capacity in the **Cell Disk Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell disk capacity settings that this field overrides.
-	1. Click **Save**.
+    1. Enter the total desired amount of Diego Cell disk capacity in the **Cell Disk Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell disk capacity settings that this field overrides.
 
-1. Click **Errands**. Pivotal recommends that the **Install HWC Buildpack Errand** be set to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
+    1. Click **Save**.
+
+1. Click **Errands**. Pivotal recommends that you set the **Install HWC Buildpack Errand** to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
 	
-	<%= image_tag('errands-hwc.png') %>
+    <%= image_tag('errands-hwc.png') %>
 
 1. Click **Resource Config** and adjust the number and VM types of your Windows cells as needed.
 
@@ -66,7 +69,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. Click **Stemcell**. Record the stemcell version number required by the tile. 
 
-	<%= image_tag('pcf-windows-tile-stemcell.png') %>
+    <%= image_tag('pcf-windows-tile-stemcell.png') %>
 
 1. Retrieve the stemcell by following the steps below for your IaaS.
     * For vSphere, you must [build your own stemcell](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/create-manual-vsphere-stemcells.md). 
@@ -77,5 +80,4 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PCF Runtime for Windows tile.
 
 After you have deployed the PCF Runtime for Windows tile, developers can then push .NET applications to Windows cells. For more information, see the [Deploying .NET Apps to Windows Cells](push-windows-apps.html) topic.
-
 
