--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -11,7 +11,7 @@ Operators can install PCF Runtime for Windows on vSphere, Amazon Web Services (A
 
 ## <a id='overview'></a>Overview
 
-Operators who want to run Windows cells in PCF in order to enable developers to push .NET apps can deploy the PCF Runtime for Windows tile.
+Operators who want to run Windows cells in PCF to enable developers to push .NET apps can deploy the PCF Runtime for Windows tile.
 
 Deploying this tile creates a separate BOSH deployment populated with the Garden Windows release, which runs on a Windows cell built from a Windows stemcell.
 
@@ -23,8 +23,8 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 
 The recommended resource requirements for each Windows cell deployed by PCF Runtime for Windows are as follows:
 
-- Disk size: 64 GB
-- Memory: 16 GB
+- Disk size: 64&nbsp;GB
+- Memory: 16&nbsp;GB
 - CPUs: 4
 
 ## <a id='understand'></a>Understanding PCF Runtime for Windows ##
