--- a/docs-content/vsphere-stemcell-build.html.md.erb
+++ b/docs-content/vsphere-stemcell-build.html.md.erb
@@ -339,6 +339,4 @@ $ rake run:bwats ["vsphere"]</pre>
 This section lists known issues for creating a vSphere stemcell manually.
 
 ###<a id="special"></a> Special Characters
-There is a known issue with using several special characters in the password while running the powershell command detailed in the above _Sysprep and apply security policies_ step. We recommend using the exclamation point, that is "!", as a special character until this issue is resolved.
-
-
+There is a known issue with using special characters in the password you create while completing the _Sysprep and apply security policies_ step. We recommend using the exclamation point, that is "!", as a special character until this issue is completely resolved.
