Integrating new AWM feedback [#147402445]

--- a/docs-content/azure-light-stemcell.html.md.erb
+++ b/docs-content/azure-light-stemcell.html.md.erb
@@ -1,11 +1,11 @@
 ---
-title: Azure Light Stemcell Activation
+title: Deploying on Azure
 owner: Greenhouse
 ---
 
 <strong><%= modified_date %></strong>
 
-This topic discusses how to activate the Azure Light Stemcell. "Light" stemcells are metadata files used on a public IaaS that enable users to reference and deploy a stemcell without uploading it manually. The actual stemcell lives on the cloud storage service of the IaaS and the BOSH Director instantiates the VMs.
+This topic discusses the Azure Light Stemcell. "Light" stemcells are metadata files used on a public IaaS that enable users to reference and deploy a stemcell without uploading it manually. The actual stemcell lives on the cloud storage service of the IaaS and the BOSH Director instantiates the VMs.
 
 ## <a id="req"></a> Requirements
 
