Integrating new AWM feedback [#147402491]

--- a/docs-content/azure-light-stemcell.html.md.erb
+++ b/docs-content/azure-light-stemcell.html.md.erb
@@ -12,7 +12,7 @@ This topic discusses how to activate the Azure Light Stemcell. "Light" stemcells
 1. In the **OpsManager Installation Dashboard**, select **PCF Runtime for Windows**. 
 1. In the **Settings** tab, select **Resource Config**. 
 1. Within the **VM Type** field, ensure that your **Windows Diego Cell** has a disk size of 128&nbsp;GB or larger. 
-1. Ensure that the **Install HWC Buildpack Errand** is present.
+1. Ensure that the **Install HWC Buildpack Errand** has a VM disk size of 128GB or larger.
 1. Navigate to the **Ops Manager Director** of your chosen IaaS. 
 1. Within the **VM Type** field, ensure the Ops Man compilation VM has an ephemeral disk of 128&nbsp;GB or larger.
 
