Incorporating name change suggested by AWM [#147402445]

--- a/docs-content/about-windows-stemcells.html.md.erb
+++ b/docs-content/about-windows-stemcells.html.md.erb
@@ -18,7 +18,7 @@ Deployments of Windows Server on PCF currently use a stemcell containing Windows
 
 Below is the documentation currently available for activating light stemcells for the Runtime for Windows tile:
 
-+ <a href="../windows/azure-light-stemcell.html" class="subnav"> Azure Light Stemcell Activation</a>
++ <a href="../windows/azure-light-stemcell.html" class="subnav"> Deploying on Azure</a>
 
 ## <a id="stemcell-builds"></a> Stemcell Builds
 
