--- a/docs-content/vsphere-stemcell-build.html.md.erb
+++ b/docs-content/vsphere-stemcell-build.html.md.erb
@@ -225,16 +225,16 @@ Applying the security policies supports the security of the stemcell and firewal
 
 1. [Download](https://msdnshared.blob.core.windows.net/media/2016/09/LGPOv2-PRE-RELEASE.zip) `lgpo.exe` to the Windows VM you are provisioning.
 1. Save `lgpo.exe` to `C:\Windows\lgpo.exe`.
-1. Run the following powershell command:  (Replace `<...>` with your own information)
-`Invoke-Sysprep -IaaS vsphere -NewPassword <NEW_PASSWORD> -ProductKey <PRODUCT_KEY> -Owner <OWNER> -Organization <ORGANIZATION>`
+1. Run the following powershell command:  (Replace values in ALL_CAPS with your own information)
+`Invoke-Sysprep -IaaS vsphere -NewPassword NEW_PASSWORD -ProductKey PRODUCT_KEY -Owner OWNER -Organization ORGANIZATION`
 
 Completing the above will power off the VM. Do not turn the VM back on before exporting.
 
 <b>If you decide to</b> `sysprep` <b>the image without applying the recommended security policies:</b> 
 
-1. Run the following powershell command: (Replace `<...>` with your own information)
+1. Run the following powershell command: (Replace values in ALL_CAPS with your own information)
 
-`Invoke-Sysprep -IaaS vsphere -NewPassword <NEW_PASSWORD> -ProductKey <PRODUCT_KEY> -Owner <OWNER> -Organization <ORGANIZATION> -SkipLGPO`
+`Invoke-Sysprep -IaaS vsphere -NewPassword NEW_PASSWORD -ProductKey PRODUCT_KEY -Owner OWNER -Organization ORGANIZATION -SkipLGPO`
 
 This will power off the VM. Do not turn the VM back on before exporting.
 
