--- a/docs-content/vsphere-stemcell-build.html.md.erb
+++ b/docs-content/vsphere-stemcell-build.html.md.erb
@@ -166,7 +166,7 @@ Pivotal does not recommend building the BOSH PSModules from the source. However,
 </br>
 </br>
 
-1. Clone this <a href="https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder">repo</a> on your host, not in the VM for your stemcell.
+1. Clone the [bosh-windows-stemcell-builder](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder) GitHub repository on your host, not in the VM for your stemcell.
 1. Expand the submodules by running the commands below:
 	<pre class="terminal">
 	$ git clone <span>https:</span>//github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder
