Updates vCenter instructions with correct path

--- a/docs-content/vsphere-stemcell-build.html.md.erb
+++ b/docs-content/vsphere-stemcell-build.html.md.erb
@@ -119,7 +119,7 @@ These are instructions for installing Windows from a Windows installation disk I
 
 ###<a id="vCenter"></a>For vCenter
 1. If you are using an ISO, upload it to your datastore.
-	1. Select **vCenter** > **Datastores**.
+	1. Select **vCenter** > **Storage**.
 	1. Select your desired datastore and directory.
 	1. Select **Upload a file to datastore** and upload the ISO. This is the hard disk icon with a green plus sign.
 1. If you use a web browser to upload the ISO to your datastore, you will be prompted to install a web plugin.  
