--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -30,7 +30,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. Click the newly added **PCF Runtime for Windows** tile.
 
-    <%= image_tag('pcf-windows-tile-orange.png') %>
+    <%= image_tag('pcf-windows-tile-orange-1-12.png') %>
 
 1. Click **Assign AZs and Networks** or **Assign Networks**. The name of the section varies depending on your IaaS.
 
