adding vm options section[#150414641]

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -36,6 +36,10 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. Assign your AZs and networks and click **Save**.
 
+1. Click **VM Options**. Specify how you would like to manage the administrator password for your Windows VMs. The default option is to **Use the Windows default password**.
+
+    <%= image_tag('vm-options.png') %>
+
 1. (Optional) If you want your PCF Runtime for Windows application workloads to be deployed to an isolation segment, perform the following steps:
 
     1. Click **Application Containers**.
