Adding syslog section [#150118208]

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -59,6 +59,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
     1. Enter the network or IP address in the **Address** field.
     1. Enter the syslog port in the **Port** field.
     1. Select the transport protocol from the dropdown menu in the **Protocol** section.
+    1. Click **Save**.
 
 
 1. (Optional) If you want to specify memory capacity and disk capacity for your Windows Cells, perform the following steps:
