--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -36,9 +36,14 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. Assign your AZs and networks and click **Save**.
 
-1. Click **VM Options**. Specify how you would like to manage the administrator password for your Windows VMs. The default option is to **Use the Windows default password**.
+1. Click **VM Options**. 
 
     <%= image_tag('vm-options.png') %>
+
+1. Specify how you would like to manage the administrator password for your Windows VMs. The default option is to **Use the Windows default password**.
+1. (Optional) Select the **BETA: Enable BOSH-native SSH support on all VMs** checkbox to start the Microsoft beta port of the OpenSSH daemon on port 22 on all VMs. Users will be able to SSH onto Windows VMs with the `bosh ssh` command, and enter a CMD terminal as an administrator user. They can then run `powershell.exe` to start a PowerShell session.
+
+    <p class="note"><strong>Note</strong>: This feature is beta and not considered production-ready.</p>
 
 1. (Optional) If you want your PCF Runtime for Windows application workloads to be deployed to an isolation segment, perform the following steps:
 
