Changing replicator link [#150029882]

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -106,7 +106,7 @@ After you have deployed the PCF Runtime for Windows tile, developers can then pu
 
 If you want to create multiple isolation segments for the Windows tile, perform the following steps to copy the **PCF Runtime for Windows** tile with the Replicator tool:
 
-1. Download the Replicator tool from the **Pivotal Cloud Foundry Isolation Segment** section of [Pivotal Network](https://network.pivotal.io/products/isolation-segment).
+1. Download the Replicator tool from the **Pivotal Cloud Foundry Runtime for Windows** section of [Pivotal Network](https://network.pivotal.io/products/p-windows-runtime).
 
 1. Navigate to the directory where you downloaded the Replicator tool.
 
