add new topic on providing a KMS configuration[#150601513]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -44,6 +44,8 @@ The recommended resource requirements for each Windows cell deployed by PCF Runt
 
 * <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
 
+* <a href="./configure-kms.html" class="subnav">Configuring a KMS Host</a>
+
 * <a href="./windows-troubleshooting.html" class="subnav">Troubleshooting Windows Cells</a>
 
 ## <a id='dev'></a>Developing on Windows Cells
