Corrected Windows Stemcells from recommended requirements to minimum requirements[#151255167]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -21,7 +21,7 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 
 ## <a id='requirements'></a> Requirements
 
-The recommended resource requirements for each Windows cell deployed by PCF Runtime for Windows are as follows:
+The minimum resource requirement for each Windows cell:
 
 - Disk size: 64&nbsp;GB
 - Memory: 16&nbsp;GB
