--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -56,15 +56,16 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
     
     1. Perform the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to create the isolation segment in the Cloud Controller Database (CCDB).
 
-1. If you would like to enable Windows event logging, perform the following steps:
-    
-    <%= image_tag('enable-syslog-wrt.png') %>
+1. (Optional) If you want to specify memory capacity and disk capacity for your Windows Cells, perform the following steps:
+	
+    1. Click **Advanced Features**.
 
-    1. Click the **System Logging** tab. 
-    1. Click **Enable**.
-    1. Enter the network or IP address in the **Address** field.
-    1. Enter the syslog port in the **Port** field.
-    1. Click the transport protocol from the dropdown menu in the **Protocol** section.
+        <%= image_tag('advanced_features_fields.png') %>
+
+    1. Enter the total desired amount of Diego Cell memory capacity in the **Cell Memory Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell memory capacity settings that this field overrides.
+
+    1. Enter the total desired amount of Diego Cell disk capacity in the **Cell Disk Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell disk capacity settings that this field overrides.
+
     1. Click **Save**.
 
 1. Click **Errands**. Pivotal recommends that you set the **Install HWC Buildpack Errand** to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
