--- a/docs-book/master_middleman/source/index.html.md.erb
+++ b/docs-book/master_middleman/source/index.html.md.erb
@@ -1,13 +1,13 @@
 <div class="main-container">
   <div class="main">
     <h2 class="title-intro">
-      Using Windows Cells
+      Pivotal Application Service (PAS) for Windows
     </h2>
     <ul class="panels">
       <li class="panel span3">
-        <a class="configure" href="windows/index.html" id="service-docs">
+        <a class="configure" href="pas-windows/index.html" id="service-docs">
           <div class="prodname">
-            Using Windows Cells
+            Pivotal Application Service (PAS) for Windows
           </div>
         </a>
       </li>
